# katalog

./: .gitignore  AGENTS.md  DESIGN.md  IDEAS.md  LICENSE.md  README.md  TODO.md  client_localfs.py  katalog.toml  models.py  package-lock.json  pyproject.toml  scan_local_list.http  server.py  utils.py  workflow.example.toml
.github/: copilot-instructions.md
clients/: base.py  filesystem.py  googledrive.py
docs/: asset-identity-prd.md  data-locator-metadata.md  database-schema.md  db-redesign.md  eval-process.md  inspiration.md  mcp-chatgpt.md  performance.md  pipeline-runtime-concepts.md  plugin-authorization.md  recipes.md
docs/api/: index.html  search.js
docs/api/katalog/: api.html
docs/api/katalog/api/: actors.html  assets.html  changesets.html  collections.html  helpers.html  (+9 more)
processors/: base.py  md5_hash.py  mime_type.py
src/katalog/: cli.py  config.py  db.py  help_texts.py  lifespan.py  metadata.py  models.py  queries.py  server.py  views.py
src/katalog/analyzers/: __init__.py  base.py  duplicates.py  eval_metrics.py  retrieval_eval.py  runtime.py  sidecar_links.py  stats.py  utils.py
src/katalog/api/: __init__.py  actors.py  assets.py  changesets.py  collections.py  helpers.py  metadata.py  operations.py  plugins.py  query_utils.py  schemas.py  search.py  state.py  system.py  views.py  workflows.py
src/katalog/cli/: __init__.py  actors.py  assets.py  changesets.py  collections.py  metadata.py  processors.py  system.py  utils.py  views.py  workflows.py
src/katalog/clients/: base.py  filesystem.py  googledrive.py
src/katalog/constants/: extensions.py  metadata.py
src/katalog/db/: __init__.py  actors.py  asset_collections.py  assets.py  changesets.py  errors.py  fts.py  metadata.py  queries.py  query_assets.py  query_changesets.py  query_filters.py  query_grouping.py  query_metadata_registry.py  query_search.py  query_sort.py  query_values.py  system.py  utils.py  vectors.py
src/katalog/editors/: base.py  user_editor.py
src/katalog/mcp/: __init__.py  server.py
src/katalog/models/: __init__.py  assets.py  core.py  metadata.py  query.py  views.py
src/katalog/plugins/: base.py  config_metadata.py  registry.py
src/katalog/processors/: archive.py  base.py  eval_text_quality.py  eval_truth_compare.py  executor_pool.py  executors.py  flag_hidden.py  kreuzberg_document_extract.py  md5_hash.py  mime_type.py  name_readability.py  path_renamer.py  path_template.py  process_executor.py  runtime.py  search_index.py  serialization.py  standard_sidecar.py  tika_metadata.py  vector_index.py
src/katalog/runtime/: batch.py  state.py
src/katalog/server/: __init__.py  app.py
src/katalog/sources/: base.py  csv.py  fake_assets.py  filesystem.py  google_drive.py  google_sheets.py  google_storage.py  googledrive.py  http_url.py  json_list.py  runtime.py  sidecars.py  tabular.py  url_list.py  user_editor.py
src/katalog/sql/: schema.sql
src/katalog/utils/: blob_cache.py  changeset_events.py  concurrent_fetcher.py  exports.py  hidden.py  snapshot_events.py  url.py  utils.py
src/katalog/vectors/: embedding.py
src/katalog/workflows/: __init__.py  contracts.py  pipeline.py  results.py  runtime.py  specs.py
tests/: conftest.py  generate_data.py  scan_local_list.http  test_actor_identity_key.py  test_api_assets_query_columns.py  test_api_error_serialization.py  test_api_operations_authorize_source.py  test_api_operations_source_run.py  test_api_workspace.py  test_asset_lost_flag.py  test_asset_processing.py  test_changeset_operation_runtime.py  test_cli_shutdown.py  test_cli_workflows_input_modes.py  test_collections.py  test_config_defined_metadata.py  test_csv_source.py  test_current_metadata.py  test_datetime_roundtrip.py  test_db_metadata.py  test_db_snapshots.py  test_eval_metrics_helpers.py  test_filesystem_scan_partial.py  test_json_list_source.py  test_json_metadata_equality.py  test_metadata_changeset.py  test_metadata_none_clear.py  test_queries.py  test_sidecar_resolver.py  test_sidecar_utils.py  test_sources_runtime_new_features.py  test_upsert.py  test_vector_embedding_utils.py  test_views.py  test_workflow_execution.py  test_workflow_lifecycle.py  test_workflow_spec_input.py
tests/integration/: test_kreuzberg_embeddings_integration.py  test_kreuzberg_workflow_smoke.py
tests/processors/: test_eval_processors.py  test_md5_hash.py  test_mime_type.py  test_path_template.py  test_pipeline_runtime.py  test_runtime.py  test_vector_index_processor.py
tests/utils/: fakes.py  metadata_helpers.py  pipeline_helpers.py  test_concurrent_fetcher.py  upsert_helpers.py
tools/: json_schema_prototype.py  list_workspace_test_assets.py  migrate_actor_identity.py  migrate_to_json_schema.py  prodtext_sync.py  rename_plugin_id.py  run_json_workflow_spec.py  smoke_core_install.py
ui/: .gitignore  index.html  package-lock.json  package.json  simple-table-test.html  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/api/: client.ts
ui/src/components/: ActorCell.tsx  ActorForm.tsx  ActorList.tsx  AppHeader.tsx  AppLink.tsx  AssetCell.tsx  AssetTable.tsx  ChangesetCell.tsx  ChangesetProgressBar.tsx  DataTable.tsx  ExternalIdCell.tsx  FileTable.tsx  FlagCell.tsx  ListTable.tsx  MetadataSearchTable.tsx  MetadataTable.tsx  ProviderCell.tsx  Sidebar.tsx  SnapshotCell.tsx  SourceExplorer.tsx  TableFooter.tsx  WorkflowList.tsx  simpleTableAppearance.ts
ui/src/contexts/: ChangesetProgressContext.tsx
ui/src/routes/: ActorCreateRoute.tsx  ActorDetailRoute.tsx  ActorsRoute.tsx  AssetDetailRoute.tsx  AssetsRoute.tsx  ChangesetDetailRoute.tsx  ChangesetsRoute.tsx  CollectionDetailRoute.tsx  CollectionsRoute.tsx  ProviderCreateRoute.tsx  ProviderDetailRoute.tsx  ProvidersRoute.tsx  RecordsRoute.tsx  SimpleTableLinkHarnessRoute.tsx  SimpleTableTestPage.tsx  SnapshotDetailRoute.tsx  SnapshotsRoute.tsx  StatsRoute.tsx  Test.tsx
ui/src/types/: api.ts
ui/src/utils/: appNavigation.ts  changesetEvents.ts  metadataGrouping.ts  registry.ts  relativeTime.ts  tableCellLinkEvents.ts  useStringSearchParamState.ts
(+35 files in other folders)
