[project]
name = "katalog"
version = "0.1.0"
description = "A pluggable digital asset catalog and management tool."
authors = [{ name = "Martin", email = "ripperdoc@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "python-magic>=0.4.27",
    "uvicorn[standard]>=0.40.0",
    "loguru>=0.7.3",
    "sqlspec[aiosqlite]",
    "typer>=0.21.1",
    "markdownify>=1.2.2",
    "markdown>=3.10",
    "openai>=2.14.0",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "crawlee>=1.2.1",
]

[tool.uv]
# Optional: configuration for uv if needed
package = true
cache-dir = ".uv_cache"

[dependency-groups]
dev = ["pip", "pytest", "pytest-asyncio", "py-spy", "line_profiler", "pyright"]

[project.scripts]
# Installable console script: runs katalog.cli:main as `katalog`
katalog = "katalog.cli:main"

[project.entry-points."katalog.source"]
filesystem = "katalog.sources.filesystem:FilesystemClient"
gdrive = "katalog.sources.googledrive:GoogleDriveClient"
fake_assets = "katalog.sources.fake_assets:FakeAssetSource"

[project.entry-points."katalog.processor"]
md5 = "katalog.processors.md5_hash:MD5HashProcessor"
mime = "katalog.processors.mime_type:MimeTypeProcessor"
name_readability = "katalog.processors.name_readability:NameReadabilityProcessor"
flag_hidden = "katalog.processors.flag_hidden:HiddenFlagProcessor"

[project.entry-points."katalog.analyzer"]
exact_duplicates = "katalog.analyzers.duplicates:ExactDuplicateAnalyzer"
stats = "katalog.analyzers.stats:StatsAnalyzer"

[project.entry-points."katalog.editor"]
user_editor = "katalog.editors.user_editor:UserEditor"
