[project]
name = "katalog"
version = "0.1.0"
description = "A pluggable digital asset catalog and management tool."
authors = [{ name = "Martin", email = "ripperdoc@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.5",
    "fastapi>=0.128.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "python-magic>=0.4.27",
    "uvicorn>=0.40.0",
    "loguru>=0.7.3",
    "sqlspec[aiosqlite]",
    "typer>=0.21.1",
    "markdownify>=1.2.2",
    "markdown>=3.10",
    "openai>=2.17.0",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "crawlee>=1.2.1",
    "kreuzberg>=4.3.8",
    "pyyaml>=6.0.2",
    "sqlite-vec>=0.1.6",
    "onnxruntime>=1.24.1",
    "google-cloud-storage>=3.9.0",
    "diskcache>=5.6.3",
    "rich>=14.3.2",
]

[tool.uv]
# Optional: configuration for uv if needed
package = true
cache-dir = ".uv_cache"

[dependency-groups]
#dev = ["pip", "pytest", "pytest-asyncio", "py-spy", "line_profiler", "pyright"]
dev = ["pip", "pytest", "pytest-asyncio", "py-spy", "pyright"]

[project.scripts]
# Installable console script: runs katalog.cli:main as `katalog`
katalog = "katalog.cli:main"

[project.entry-points."katalog.source"]
filesystem = "katalog.sources.filesystem:FilesystemClient"
gdrive = "katalog.sources.googledrive:GoogleDriveClient"
fake_assets = "katalog.sources.fake_assets:FakeAssetSource"
url_list = "katalog.sources.url_list:UrlListSource"
json_list = "katalog.sources.json_list:JsonListSource"
http_url = "katalog.sources.http_url:HttpUrlSource"
google_storage = "katalog.sources.google_storage:GoogleStorageSource"

[project.entry-points."katalog.processor"]
md5 = "katalog.processors.md5_hash:MD5HashProcessor"
mime = "katalog.processors.mime_type:MimeTypeProcessor"
name_readability = "katalog.processors.name_readability:NameReadabilityProcessor"
flag_hidden = "katalog.processors.flag_hidden:HiddenFlagProcessor"
search_index = "katalog.processors.search_index:SearchIndexProcessor"
path_renamer = "katalog.processors.path_renamer:PathRenamerProcessor"
kreuzberg_document_extract = "katalog.processors.kreuzberg_document_extract:KreuzbergDocumentExtractProcessor"
vector_index = "katalog.processors.vector_index:KreuzbergVectorIndexProcessor"
eval_text_quality = "katalog.processors.eval_text_quality:EvalTextQualityProcessor"
eval_truth_compare = "katalog.processors.eval_truth_compare:EvalTruthCompareProcessor"
standard_sidecar = "katalog.processors.standard_sidecar:StandardSidecarProcessor"

[project.entry-points."katalog.analyzer"]
exact_duplicates = "katalog.analyzers.duplicates:ExactDuplicateAnalyzer"
stats = "katalog.analyzers.stats:StatsAnalyzer"
eval_metrics = "katalog.analyzers.eval_metrics:EvalMetricsAnalyzer"
retrieval_eval = "katalog.analyzers.retrieval_eval:RetrievalEvalAnalyzer"
sidecar_links = "katalog.analyzers.sidecar_links:SidecarLinksAnalyzer"

[project.entry-points."katalog.editor"]
user_editor = "katalog.editors.user_editor:UserEditor"
